// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiTablePagination is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--alignItemsCenter ouiFlexGroup--justifyContentSpaceBetween ouiFlexGroup--directionRow"
>
  <div
    class="ouiFlexItem ouiFlexItem--flexGrowZero"
  >
    <div
      class="ouiPopover ouiPopover--anchorUpRight"
    >
      <div
        class="ouiPopover__anchor"
      >
        <button
          class="ouiButtonEmpty ouiButtonEmpty--text ouiButtonEmpty--xSmall"
          data-test-subj="tablePaginationPopoverButton"
          type="button"
        >
          <span
            class="ouiButtonContent ouiButtonContent--iconRight ouiButtonEmpty__content"
          >
            <span
              class="ouiButtonContent__icon"
              color="inherit"
              data-ouiicon-type="arrowDown"
            />
            <span
              class="ouiButtonEmpty__text"
            >
              Rows per page: 50
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="ouiFlexItem ouiFlexItem--flexGrowZero"
  >
    <nav
      aria-label="aria-label"
      class="ouiPagination testClass1 testClass2"
      data-test-subj="test subject string"
    >
      <button
        aria-label="Previous page, 1"
        class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall"
        data-test-subj="pagination-button-previous"
        type="button"
      >
        <span
          aria-hidden="true"
          class="ouiButtonIcon__icon"
          color="inherit"
          data-ouiicon-type="arrowLeft"
        />
      </button>
      <ul
        aria-label="aria-label"
        class="ouiPagination__list"
      >
        <li
          class="ouiPagination__item"
        >
          <button
            aria-label="Page 1 of 5"
            class="ouiButtonEmpty ouiButtonEmpty--text ouiButtonEmpty--small ouiPaginationButton ouiPaginationButton--hideOnMobile"
            data-test-subj="pagination-button-0"
            type="button"
          >
            <span
              class="ouiButtonContent ouiButtonEmpty__content"
            >
              <span
                class="ouiButtonEmpty__text"
              >
                1
              </span>
            </span>
          </button>
        </li>
        <li
          class="ouiPagination__item"
        >
          <button
            aria-current="true"
            aria-label="Page 2 of 5"
            class="ouiButtonEmpty ouiButtonEmpty--text ouiButtonEmpty--small ouiButtonEmpty-isDisabled ouiPaginationButton ouiPaginationButton-isActive ouiPaginationButton--hideOnMobile"
            data-test-subj="pagination-button-1"
            disabled=""
            type="button"
          >
            <span
              class="ouiButtonContent ouiButtonEmpty__content"
            >
              <span
                class="ouiButtonEmpty__text"
              >
                2
              </span>
            </span>
          </button>
        </li>
        <li
          class="ouiPagination__item"
        >
          <button
            aria-label="Page 3 of 5"
            class="ouiButtonEmpty ouiButtonEmpty--text ouiButtonEmpty--small ouiPaginationButton ouiPaginationButton--hideOnMobile"
            data-test-subj="pagination-button-2"
            type="button"
          >
            <span
              class="ouiButtonContent ouiButtonEmpty__content"
            >
              <span
                class="ouiButtonEmpty__text"
              >
                3
              </span>
            </span>
          </button>
        </li>
        <li
          class="ouiPagination__item"
        >
          <button
            aria-label="Page 4 of 5"
            class="ouiButtonEmpty ouiButtonEmpty--text ouiButtonEmpty--small ouiPaginationButton ouiPaginationButton--hideOnMobile"
            data-test-subj="pagination-button-3"
            type="button"
          >
            <span
              class="ouiButtonContent ouiButtonEmpty__content"
            >
              <span
                class="ouiButtonEmpty__text"
              >
                4
              </span>
            </span>
          </button>
        </li>
        <li
          class="ouiPagination__item"
        >
          <button
            aria-label="Page 5 of 5"
            class="ouiButtonEmpty ouiButtonEmpty--text ouiButtonEmpty--small ouiPaginationButton ouiPaginationButton--hideOnMobile"
            data-test-subj="pagination-button-4"
            type="button"
          >
            <span
              class="ouiButtonContent ouiButtonEmpty__content"
            >
              <span
                class="ouiButtonEmpty__text"
              >
                5
              </span>
            </span>
          </button>
        </li>
      </ul>
      <button
        aria-label="Next page, 3"
        class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall"
        data-test-subj="pagination-button-next"
        type="button"
      >
        <span
          aria-hidden="true"
          class="ouiButtonIcon__icon"
          color="inherit"
          data-ouiicon-type="arrowRight"
        />
      </button>
    </nav>
  </div>
</div>
`;

exports[`OuiTablePagination is rendered when hiding the per page options 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--alignItemsCenter ouiFlexGroup--justifyContentSpaceBetween ouiFlexGroup--directionRow"
>
  <div
    class="ouiFlexItem ouiFlexItem--flexGrowZero"
  />
  <div
    class="ouiFlexItem ouiFlexItem--flexGrowZero"
  >
    <nav
      aria-label="aria-label"
      class="ouiPagination testClass1 testClass2"
      data-test-subj="test subject string"
    >
      <button
        aria-label="Previous page, 1"
        class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall"
        data-test-subj="pagination-button-previous"
        type="button"
      >
        <span
          aria-hidden="true"
          class="ouiButtonIcon__icon"
          color="inherit"
          data-ouiicon-type="arrowLeft"
        />
      </button>
      <ul
        aria-label="aria-label"
        class="ouiPagination__list"
      >
        <li
          class="ouiPagination__item"
        >
          <button
            aria-label="Page 1 of 5"
            class="ouiButtonEmpty ouiButtonEmpty--text ouiButtonEmpty--small ouiPaginationButton ouiPaginationButton--hideOnMobile"
            data-test-subj="pagination-button-0"
            type="button"
          >
            <span
              class="ouiButtonContent ouiButtonEmpty__content"
            >
              <span
                class="ouiButtonEmpty__text"
              >
                1
              </span>
            </span>
          </button>
        </li>
        <li
          class="ouiPagination__item"
        >
          <button
            aria-current="true"
            aria-label="Page 2 of 5"
            class="ouiButtonEmpty ouiButtonEmpty--text ouiButtonEmpty--small ouiButtonEmpty-isDisabled ouiPaginationButton ouiPaginationButton-isActive ouiPaginationButton--hideOnMobile"
            data-test-subj="pagination-button-1"
            disabled=""
            type="button"
          >
            <span
              class="ouiButtonContent ouiButtonEmpty__content"
            >
              <span
                class="ouiButtonEmpty__text"
              >
                2
              </span>
            </span>
          </button>
        </li>
        <li
          class="ouiPagination__item"
        >
          <button
            aria-label="Page 3 of 5"
            class="ouiButtonEmpty ouiButtonEmpty--text ouiButtonEmpty--small ouiPaginationButton ouiPaginationButton--hideOnMobile"
            data-test-subj="pagination-button-2"
            type="button"
          >
            <span
              class="ouiButtonContent ouiButtonEmpty__content"
            >
              <span
                class="ouiButtonEmpty__text"
              >
                3
              </span>
            </span>
          </button>
        </li>
        <li
          class="ouiPagination__item"
        >
          <button
            aria-label="Page 4 of 5"
            class="ouiButtonEmpty ouiButtonEmpty--text ouiButtonEmpty--small ouiPaginationButton ouiPaginationButton--hideOnMobile"
            data-test-subj="pagination-button-3"
            type="button"
          >
            <span
              class="ouiButtonContent ouiButtonEmpty__content"
            >
              <span
                class="ouiButtonEmpty__text"
              >
                4
              </span>
            </span>
          </button>
        </li>
        <li
          class="ouiPagination__item"
        >
          <button
            aria-label="Page 5 of 5"
            class="ouiButtonEmpty ouiButtonEmpty--text ouiButtonEmpty--small ouiPaginationButton ouiPaginationButton--hideOnMobile"
            data-test-subj="pagination-button-4"
            type="button"
          >
            <span
              class="ouiButtonContent ouiButtonEmpty__content"
            >
              <span
                class="ouiButtonEmpty__text"
              >
                5
              </span>
            </span>
          </button>
        </li>
      </ul>
      <button
        aria-label="Next page, 3"
        class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall"
        data-test-subj="pagination-button-next"
        type="button"
      >
        <span
          aria-hidden="true"
          class="ouiButtonIcon__icon"
          color="inherit"
          data-ouiicon-type="arrowRight"
        />
      </button>
    </nav>
  </div>
</div>
`;
